--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -4,7 +4,7 @@
 
   <div class="field" id="post-field">
     <%#= f.label :content %> <br />
-    <%= f.text_field :content, placeholder: "Say something. . .", required: true, class: "post-content" %> <br /><br />
+    <%= f.text_field :context, placeholder: "Say something. . .", required: true, class: "post-content" %> <br /><br />
     <%= f.label :tag_list %><br />
     <%= f.text_field :tag_list %>
   </div>
@@ -23,5 +23,5 @@
 
 <% end %>
   
-</div>
+</div><br />
 
