--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
   <% @posts.each do |post| %>    
       <p class="user-link-content"><%= link_to post.user.username, main_app.profile_path(post.user.username) %> Posted</p>
-      <p class="feed-content"><%= post.content %></p> 
+      <p class="feed-content"><%= post.context %></p> 
       
         <br /> 
     
