--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">  
  
   <div class="posts">
-    <%= @post.content %> <br />
+    <%= @post.context %> <br />
 
     <p>
       Tags:
