--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -30,7 +30,7 @@
     <div class="feed_index_posts">
 
       <% @posts.each do |post| %>             
-        <p class="feed-content"><%= link_to post.content, main_app.post_path(post) %></p>
+        <p class="feed-content"><%= link_to post.context, main_app.post_path(post) %></p>
 
         <% (0...post.images.count).each do |image| %>    
           <p><%= link_to image_tag(post.images[image], class: "feed-images" ), main_app.post_path(post) if post.images.attached? %></p>
