--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,26 +2,27 @@
   <%= form_for @post do | f | %>
 
 
-  <div class="field" id="post-field">
-    <%#= f.label :content %> <br />
-    <%= f.text_field :context, placeholder: "Say something. . .", required: true, class: "post-content" %> <br /><br />
-    <%= f.label :tag_list %><br />
-    <%= f.text_field :tag_list %>
-  </div>
+    <div class="field" id="post-field">      
+      <%= f.text_field :context, placeholder: "Say something. . .", required: true, class: "post-content" %> <br /><br />      
+      <%= f.text_field :tag_list, placeholder: "Each tag separated by a comma", class: "tag-content" %>
+    </div>
 
-  <div class="field" id="post-field"> 
-    <%= f.label :images, "Add your photos here" %>   <br />
-    <%= f.file_field :images, multiple: true, class: "image-content" %><br />
-    <%= f.file_field :images, multiple: true, class: "image-content" %><br />
-    <%= f.file_field :images, multiple: true, class: "image-content" %><br />
-    <%= f.file_field :images, multiple: true, class: "image-content" %><br />
-    <%= f.file_field :images, multiple: true, class: "image-content" %><br />
-  </div>
+    <div class="field" id="post-field"> 
+      <%= f.label :images, "Add your photos here" %>   <br />
+      <%= f.file_field :images, multiple: true, class: "image-content" %><br />
+      <%= f.file_field :images, multiple: true, class: "image-content" %><br />
+      <%= f.file_field :images, multiple: true, class: "image-content" %><br />
+      <%= f.file_field :images, multiple: true, class: "image-content" %><br />
+      <%= f.file_field :images, multiple: true, class: "image-content" %><br />
+    </div>
 
-  <%= f.submit class: "btn btn-dark" %>
-  <%= link_to 'Go Back', :back, class:"btn btn-light" %>
-
-<% end %>
+    <div class="post-btns">
+      <%= f.submit class: "btn btn-dark" %>
+      <%= link_to 'Go Back', :back, class:"btn btn-light" %>
+    </div>
+    
+    
+  <% end %>
   
 </div><br />
 
