--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,7 +1,7 @@
 <% if notice %>
-  <div class="alert alert-success"><%= notice %></div>
+  <div class="alert alert-success" id="notice"><%= notice %></div>
 <% end %>
 
 <% if alert %>
-  <div class="alert alert-danger"><%= alert %></div>
+  <div class="alert alert-danger" id="alert"><%= alert %></div>
 <% end %>
