--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,7 +6,7 @@
   <hr style="height:5px">
 
   <% if @moderate %>
-    <%= link_to 'Delete comment', main_app.comment_path(comment), method: :delete, class: "btn btn-dark" %>
+    <%= link_to 'Delete', main_app.comment_path(comment), method: :delete, class: "btn btn-dark" %>
   <% end %>
   
 </div>
