--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -78,15 +78,30 @@
 }
 
 .notifications {
+  padding-left: 0;
   .heading {
-    margin: 5vh 10vw;    
+    margin: 3vh 0; 
+    padding-left: 10vw   
   }
 
   .list {
-    margin: 5vh 10vw;   
+    padding: 5vh 0 10vh 10vw;     
     justify-content: center; 
     font-family: 'Roboto', sans-serif;
-    font-weight: 700;    
+    font-weight: 700;  
+    width: 70vw;
+
+    .group-title {
+      color: #026d75;
+      padding-bottom: 5vh;
+      padding-top: 0;
+      margin-top: 0;
+    }
+
+    .media-right {
+      color: #0f7502;
+      padding-bottom: 3.5vh;
+    }
   }
 }
 
