--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -20,7 +20,8 @@
     flex: 65%;
     
     .posts {
-      margin: 5vh 0;
+      margin-top: 7vh;
+      margin-bottom: 3vh;
       font-family: 'Roboto', sans-serif;
       font-size: larger;
 
@@ -28,12 +29,12 @@
         font-family: 'Roboto', sans-serif;
         font-weight: 600;
         text-decoration-line:none;
-        color: #116466
+        color: #116466;
       }
     }
 
     .post-options {
-      margin: 5vh 0;
+      margin-bottom: 5vh;
     }
 
 
@@ -42,7 +43,7 @@
       h3 {
         font-family: 'Roboto', sans-serif;
       }
-      margin-top: 10vh;
+      
     }
 
     h5 {
@@ -93,10 +94,8 @@
 
 .post-form {   
   display: flex;
-  justify-content: center;   
-  height: 100vh;
-  background-color: #BAB2B5;
-  
+  justify-content: center;  
+  background-color: #BAB2B5;  
   
   #post-field {
     margin-top: 8vh;
