--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -7,26 +7,21 @@
   <p class="user-info"><%= sanitize @user.bio %></p>
  </div>
 
- 
-
-
 
 <div class="all_posts">
-
   <div class="user-options-btns">
 
     <% if @user == current_user %>
-      <%= link_to "Edit Profile", main_app.edit_profile_path(@user.username), class: "btn btn-warning" %>
+      <%= link_to "Edit Profile", main_app.edit_profile_path(@user.username), class: "btn btn-success" %>
     <% elsif current_user_is_following(current_user.id, @user.id) %>
-      <%= link_to "Unfollow", main_app.unfollow_user_path, method: :post, class: "btn btn-success" %>
+      <%= link_to "Unfollow", main_app.unfollow_user_path, method: :post, class: "btn btn-warning" %>
     <% else %> 
       <%= link_to "Follow", main_app.follow_user_path, method: :post, class: "btn btn-success" %>
     <% end %>
-  
-   </div>
+
+  </div>
+
   <div class="panel-body">    
-     
-    
     <div class="feed_index_posts">
 
       <% @posts.each do |post| %>             
@@ -37,7 +32,7 @@
         <% end %>  
         <hr>
       <% end %> 
-            
+
     </div>
   </div>
 </div>
